cabal-version:       2.4

name:                hpulsar
version:             0.1.0.0
synopsis:            Apache Pulsar client for Haskell
-- description:
-- bug-reports:
-- license:
license:             Apache-2.0
license-file:        LICENSE
author:              Gabriel Volpe
maintainer:          volpegabriel@gmail.com
-- copyright:
-- category:
build-type:          Custom
extra-source-files:  README.md
                   , src/pulsar_api.proto

custom-setup
  setup-depends:       base
                     , Cabal
                     , proto-lens-setup
  build-tool-depends:  proto-lens-protoc:proto-lens-protoc

library
  exposed-modules:     Pulsar
  other-modules:       Paths_hpulsar
                     , Proto.PulsarApi
                     , Proto.PulsarApi_Fields
                     , Pulsar.Commands
                     , Pulsar.Core
                     , Pulsar.Connection
                     , Pulsar.Data
                     , Pulsar.Internal.Frame
                     , Pulsar.Internal.TCPClient
  autogen-modules:     Proto.PulsarApi
                     , Proto.PulsarApi_Fields
  build-depends:       base
                     , binary
                     , bytestring
                     , crc32c
                     , lens-family-core
                     , managed
                     , mtl
                     , network
                     , proto-lens
                     , proto-lens-runtime
                     , text
  hs-source-dirs:      src
  default-language:    Haskell2010

executable hpulsar
  main-is:             Main.hs
  build-depends:       base
                     , hpulsar
                     , managed
  hs-source-dirs:      app
  default-language:    Haskell2010
