cabal-version:       2.4

name:                hpulsar
version:             0.1.0.0
synopsis:            Apache Pulsar client for Haskell
-- description:
-- bug-reports:
license:             Apache-2.0
license-file:        LICENSE
author:              Gabriel Volpe
maintainer:          gabriel.volpe@chatroulette.com
-- copyright:
-- category:
build-type:          Custom
extra-source-files:  README.md
                   , src/pulsar_api.proto

custom-setup
  setup-depends:       base
                     , Cabal
                     , proto-lens-setup
  build-tool-depends:  proto-lens-protoc:proto-lens-protoc

library
  exposed-modules:     Pulsar
                     , Pulsar.Consumer
                     , Pulsar.Producer
  other-modules:       Paths_hpulsar
                     , Proto.PulsarApi
                     , Proto.PulsarApi_Fields
                     , Pulsar.Core
                     , Pulsar.Connection
                     , Pulsar.Internal.Core
                     , Pulsar.Internal.TCPClient
                     , Pulsar.Protocol.Commands
                     , Pulsar.Protocol.Decoder
                     , Pulsar.Protocol.Encoder
                     , Pulsar.Protocol.Frame
                     , Pulsar.Types
  autogen-modules:     Proto.PulsarApi
                     , Proto.PulsarApi_Fields
  build-depends:       base
                     , bifunctor
                     , binary
                     , bytestring
                     , crc32c
                     , exceptions
                     , lens-family-core
                     , managed
                     , mtl
                     , network
                     , proto-lens
                     , proto-lens-runtime
                     , text
                     , unliftio
                     , unliftio-core
  hs-source-dirs:      src
  default-language:    Haskell2010

executable hpulsar
  main-is:             Main.hs
  build-depends:       base
                     , async
                     , hpulsar
  hs-source-dirs:      app
  default-language:    Haskell2010
